<resources>
    <string name="app_name">Transmissões Desportivas</string>
    <string name="strBtnCanais">Channel List</string>
    <string name="strBtnClose">Close</string>
    <string name="strVs">Vs</string>
    <string name="title_activity_main2">Channel List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Transmissões Desportivas App</string>
    <string name="nav_header_subtitle">zerozero@myfeup.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="with_internet">With internet connection</string>
    <string name="updating_application">Updating Application</string>
    <string name="downloading_content">Please wait, we are downloading content...</string>
    <string name="urlTVChannel">http://www.zerozero.pt/api/v1/getChannels/AppKey/6hjKrg45/DomainID/pt</string>
    <string name="sports_list">Lista de C</string>
    <string name="channel_list">Lista de Canais</string>
    <string name="canais">Canais</string>
    <string name="desportos">Competitions</string>
    <string name="app_idioma">App Idioma</string>
    <string name="idioma_default">idioma_default</string>
    <string name="idioma_pt">Portuguese</string>
    <string name="idioma_es">Spanish</string>
    <string name="idioma_br">Brazilian</string>
    <string name="back_to_sports">Voltar Lista de C</string>
    <string name="updating_app">Updating Application</string>
    <string name="downloading_new">Please wait, we are downloading new actualization...</string>
    <string name="urlChannel">http://www.zerozero.pt/api/v1/getZapping/AppKey/6BaJ4G1Y/DomainID/pt/SportsID/</string>
    <string name="back_to_channels">Back to Channel List</string>
    <string name="title_activity_match_info">Match Info</string>
    <string name="resultados_anteriores">" Previous Results"</string>
    <string name="odds_do_jogo">"Odds "</string>
    <string name="today">today</string>
    <string name="urlSports">http://www.zerozero.pt/api/v1/getCompetitions/AppKey/54hjflhsw6/DomainID/pt</string>
    <string name="urlZapping">http://www.zerozero.pt/api/v1/getZapping/AppKey/6BaJ4G1Y/DomainID/pt</string>
    <string name="urlTeam">http://www.zerozero.pt/api/v1/getTeam/AppKey/3bLTwE2r/TeamID/</string>
    <string name="urlMatch">http://www.zerozero.pt/api/v1/getMatch/AppKey/3bRT1D7a/MatchID/</string>
    <string name="urlCompetitions">http://www.zerozero.pt/api/v1/getCompetitions/AppKey/54hjflhsw6/DomainID/pt</string>
</resources>
