<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_settings_idioma">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/radioBtnDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idioma_default"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioBtnPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idioma_pt"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioBtnEs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idioma_es"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioBtnBr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idioma_br"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>
</RelativeLayout>