<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MatchInfo"
    android:orientation="vertical"
    tools:showIn="@layout/activity_match_info">

    <TextView
        android:id="@+id/match_Info_Sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:text="Sport"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/match_Info_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text="Data"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/match_Info_Canal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:text="Canal  Hora"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center|top">

        <ImageView
            android:id="@+id/match_Info_imgHomeTeam"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="0dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/match_Info_txtHomeTeam"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/match_Info_imgHomeTeam"
            android:layout_toRightOf="@+id/match_Info_imgHomeTeam"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:fontFamily="sans-serif-condensed" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center|top">

        <TextView
            android:id="@+id/match_Info_textVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/strVs"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center|top">

        <ImageView
            android:id="@+id/match_Info_imgAwayTeam"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="0dp"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/match_Info_txtAwayTeam"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/match_Info_imgAwayTeam"
            android:layout_toRightOf="@+id/match_Info_imgAwayTeam"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:fontFamily="sans-serif-condensed" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/match_Info_LastResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/resultados_anteriores"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/match_info_MatchResults"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/match_Info_LastResults">
        </ListView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/match_Info_Odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/odds_do_jogo"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/match_info_MatchOdds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/match_Info_Odds">
        </ListView>

    </RelativeLayout>


</LinearLayout>